[common mobile] Fixed styles

--- a/apps/common/mobile/resources/less/common.less
+++ b/apps/common/mobile/resources/less/common.less
@@ -60,6 +60,12 @@
     }
 }
 
+.page-content {
+    &.tab {
+        padding-top: 0;
+    }
+}
+
 .color-palettes {
     .palette {
         padding: 8px 0px;
